7dda517b924f5abf9b0c1a39b43b28771bb5e063

--- a/index.html
+++ b/index.html
@@ -4561,7 +4561,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>Cheatsheet on HTML, CSS and JavaScript.</p>
 </div>
 <div class="paragraph">
-<p>Old cheat at: <a href="web/" class="bare">web/</a></p>
+<p>Old cheat on separate repo: <a href="web/" class="bare">web/</a></p>
 </div>
 <div class="paragraph">
 <p>Now moving to either:</p>
@@ -4569,7 +4569,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="ulist">
 <ul>
 <li>
-<p>files under: <a href="web-cheat/" class="bare">web-cheat/</a> for the boring stuff</p>
+<p>separate files under: <a href="web-cheat/" class="bare">web-cheat/</a> for the boring stuff</p>
 </li>
 <li>
 <p>subsections under this section for the more exciting stuff!</p>
@@ -4589,7 +4589,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p><a href="web-cheat/js-image-load.html" class="bare">web-cheat/js-image-load.html</a>: load an image from JavaScript dynamically: <a href="https://stackoverflow.com/questions/226847/what-is-the-best-javascript-code-to-create-an-img-element" class="bare">https://stackoverflow.com/questions/226847/what-is-the-best-javascript-code-to-create-an-img-element</a></p>
 </li>
 <li>
-<p><a href="web-cheat/js-image-load.html" class="bare">web-cheat/js-image-load.html</a>: load an image from JavaScript dynamically when it would become visible on the viewport: <a href="https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport" class="bare">https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport</a></p>
+<p><a href="web-cheat/js-image-load-viewport.html" class="bare">web-cheat/js-image-load-viewport.html</a>: load an image from JavaScript dynamically when it would become visible on the viewport: <a href="https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport" class="bare">https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport</a></p>
 </li>
 </ul>
 </div>
