--- a/index.html
+++ b/index.html
@@ -2023,7 +2023,7 @@ label {
 </ul>
 </div>
 <div class="paragraph">
-<p>A younger unrelated Argentinian homonym that can be found through xref:google[:</p>
+<p>A younger unrelated Argentinian homonym that can be found through <a href="#google">Google</a>:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -4462,7 +4462,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p><a href="https://en.wikipedia.org/wiki/Computer" class="bare">https://en.wikipedia.org/wiki/Computer</a></p>
 </div>
 <div class="paragraph">
-<p>The artistic instrument that enables the ultimate <a href="#art">Art</a>: coding, in particular of physics simulations and xref:formal proofs.</p>
+<p>The artistic instrument that enables the ultimate <a href="#art">Art</a>: coding, in particular of <a href="#computational-physics">physics simulations</a> and <a href="#formalization-of-mathematics">Formalization of mathematics</a>.</p>
 </div>
 <div class="paragraph">
 <p>Much more useful than instruments used in inferior arts, such as pianos or paintbrushes.</p>
