72da89da022a985204b129d6444e065fae4ab7d9

--- a/index.html
+++ b/index.html
@@ -287,15 +287,6 @@ label {
 }
 /* Custom style. */
 </style>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css"
-  crossorigin="anonymous"
->
-<style>
-.katex { font-size: 1.5em; }
-</style>
-
 </head>
 <body class="article">
 <div id="header">
@@ -1833,6 +1824,9 @@ label {
 <p><a href="https://pypi.org/user/cirosantilli/" class="bare">https://pypi.org/user/cirosantilli/</a></p>
 </li>
 <li>
+<p><a href="https://rubygems.org/profiles/cirosantilli" class="bare">https://rubygems.org/profiles/cirosantilli</a></p>
+</li>
+<li>
 <p><a href="https://software.intel.com/en-us/user/1090688" class="bare">https://software.intel.com/en-us/user/1090688</a></p>
 </li>
 <li>
@@ -2250,7 +2244,7 @@ git commit -m 'update gems'</pre>
 <div class="ulist">
 <ul>
 <li>
-<p>Ciro will want some unsupported extensions, notably mathematics, likely with Katex server side:</p>
+<p>Ciro will want some unsupported extensions, notably mathematics, likely with <a href="#mathematics-typesetting-setup-of-ciro-santillis-website">Katex server side</a>:</p>
 <div class="ulist">
 <ul>
 <li>
@@ -2428,6 +2422,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="content">
 \[\sqrt{2+2} = 2\]
 </div>
+</div>
+<div class="paragraph">
+<p>TODO: move to <a href="https://github.com/cirosantilli/asciidoctor-katex-2" class="bare">https://github.com/cirosantilli/asciidoctor-katex-2</a> once major TODOs there are done.</p>
 </div>
 </div>
 </div>
