--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
 <p><a href="#quantum-computing">Quantum computing</a></p>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Fusion_power" class="bare">https://en.wikipedia.org/wiki/Fusion_power</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Fusion_power">Fusion power</a></p>
 </li>
 </ul>
 </div>
@@ -1484,6 +1484,9 @@
 </li>
 <li>
 <p><a href="https://cirosantilli.imgur.com" class="bare">https://cirosantilli.imgur.com</a></p>
+</li>
+<li>
+<p><a href="https://commons.wikimedia.org/wiki/User:Cirosantilli2" class="bare">https://commons.wikimedia.org/wiki/User:Cirosantilli2</a></p>
 </li>
 <li>
 <p><a href="https://community.arm.com/people/cirosantilli" class="bare">https://community.arm.com/people/cirosantilli</a></p>
