24be60e13319343ecb0e53715c0f9dc8c0a06b46

--- a/window-blackout.html
+++ b/window-blackout.html
@@ -74,7 +74,9 @@
 
 <p><img src="https://web.archive.org/web/20190823083205if_/https://images-na.ssl-images-amazon.com/images/I/41kiYRgIhtL.jpg" height="200" /></p>
 
-<p>Demonstration if everything goes exceptionally well: <a href="https://www.youtube.com/watch?v=cTVVe7codw4">https://www.youtube.com/watch?v=cTVVe7codw4</a></p>
+<p>Demonstration if everything goes exceptionally well: <a href="https://www.youtube.com/watch?v=sGLq9OuF9Yg">How to fit a Total Blackout Cassette Roller Blind</a> by “Order Blinds Online” published on Jan 27, 2016:</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cTVVe7codw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
 <p>However, not all will necessarily be fun and games as in that YouTube video, especially if you are doing it for the first time, and the main point of this article is to make you aware of that.</p>
 
@@ -86,7 +88,7 @@
 
 <p>The top part requires hammering nails as shown on the video: <a href="https://youtu.be/cTVVe7codw4?t=24">https://youtu.be/cTVVe7codw4?t=24</a> but this is generally rental acceptable, and you can fill the holes afterwards.</p>
 
-<p>Once you have the setup in place, it is likely that there will be some light gaps still, because it is basically impossible to make such large objects fit perfectly. This was especially true for the top o the window, but also for the sides, so I just used some black tape</p>
+<p>Once you have the setup in place, it is likely that there will be some light gaps still, because it is basically impossible to make such large objects fit perfectly. This was especially true for the top of the window, but also for the sides, so I just used some black tape</p>
 
 <p>So I added some wide (50mm) <a href="https://www.diy.com/departments/diall-black-repair-tape-l-25m-w-50mm/1638456_BQ.prd">Diall PVC repairing black tape</a> (<a href="http://web.archive.org/web/20190823073702/https://www.diy.com/departments/diall-black-repair-tape-l-25m-w-50mm/1638456_BQ.prd">archive</a>) between the blind and the wall to completely seal off the light:</p>
 
@@ -94,7 +96,7 @@
 
 <p><img src="http://web.archive.org/web/20190823073053if_/https://media.diy.com/is/image/Kingfisher/3663602932345_01c" height="500" /></p>
 
-<p>There is still some leakage at the bottom however, which cannot be taped. I mitigated that a bit by putting some black T-shirts on the bottom window sill.</p>
+<p>There is still some leakage at the bottom however, which cannot be taped. I mitigated that a bit by putting some black T-shirts on the bottom window sill, and together with the pre-existing rental curtain, it was enough.</p>
 
 <h2 id="previous-failed-attempts">Previous failed attempts</h2>
 
