2bb209696ede03a35bb4be559d441408b51d725a

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <ul class="sectlevel3">
 <li><a href="#ciro-santillis-documentation-superpowers">1.8.1. Ciro Santilli&#8217;s documentation superpowers</a></li>
 <li><a href="#ciro-santillis-natural-languages-skills">1.8.2. Ciro Santilli&#8217;s natural languages skills</a></li>
+<li><a href="#ciro-santillis-formal-education">1.8.3. Ciro Santilli&#8217;s formal education</a></li>
 </ul>
 </li>
 </ul>
@@ -297,7 +298,8 @@
 <li><a href="#how-to-teach--talk-with-indivituals-not-to-groups">6.12. Talk with individuals, not to groups</a></li>
 <li><a href="#how-to-teach--help-students-achieve-their-goal">6.13. Help students achieve their goal</a></li>
 <li><a href="#how-to-teach--become-famous-through-teaching">6.14. Become famous through teaching</a></li>
-<li><a href="#how-to-teach--bibliography">6.15. Bibliography</a></li>
+<li><a href="#how-to-teach--publish-your-material-even-even-if-it-is-not-perfect">6.15. Publish your material even if it is nor perfect</a></li>
+<li><a href="#how-to-teach--bibliography">6.16. Bibliography</a></li>
 </ul>
 </li>
 <li><a href="#countries">7. Countries</a>
@@ -2037,9 +2039,6 @@ git commit -m 'update gems'</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="education" class="bare">education</a></p>
-</li>
-<li>
 <p><a href="interests" class="bare">interests</a></p>
 </li>
 <li>
@@ -2383,6 +2382,56 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>Chinese: see <a href="https://github.com/cirosantilli/china-dictatorship/tree/92cfb1a9a62e45447c1d4e0bf5483c572a3d1bd7#what-is-your-chinese-level" class="bare">https://github.com/cirosantilli/china-dictatorship/tree/92cfb1a9a62e45447c1d4e0bf5483c572a3d1bd7#what-is-your-chinese-level</a></p>
 </li>
 </ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="ciro-santillis-formal-education"><a class="anchor" href="#ciro-santillis-formal-education"></a><a class="link" href="#ciro-santillis-formal-education">1.8.3. Ciro Santilli&#8217;s formal education</a></h4>
+<div class="paragraph">
+<p><a href="#ciro-santilli">Ciro Santilli</a> did a double degree program, and obtained degrees in both:</p>
+</div>
+<div class="paragraph">
+<p>Ciro participated in a double degree program, so he obtained have engineering degrees in both:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>2010 - 2014: <a href="https://en.wikipedia.org/wiki/%C3%89cole_Polytechnique">École Polytechnique (Palaiseau, France)</a></strong></p>
+<div class="paragraph">
+<p>Master 2 degree in Applied Mathematics.</p>
+</div>
+<div class="paragraph">
+<p>Best French engineering schools in <a href="https://www.timeshighereducation.co.uk/world-university-rankings/2013-14/subject-ranking/subject/engineering-and-IT">the Times Ranking 2013</a> (<a href="http://web.archive.org/web/20190828083945/https://www.timeshighereducation.com/world-university-rankings/2014/subject-ranking/engineering-and-IT#!/page/2/length/25/sort_by/rank/sort_order/asc/cols/undefined">archive</a>)</p>
+</div>
+</li>
+<li>
+<p><strong>2007 - 2010: <a href="https://en.wikipedia.org/wiki/University_of_S%C3%A3o_Paulo">University of São Paulo (Brazil)</a></strong></p>
+<div class="paragraph">
+<p>Automation and Control Engineer.</p>
+</div>
+<div class="paragraph">
+<p>The best South American university <a href="https://www.timeshighereducation.co.uk/world-university-rankings/2013-14/world-ranking/region/south-america">in the Times Ranking 2013</a> (<a href="http://web.archive.org/web/20190828083945/https://www.timeshighereducation.com/world-university-rankings/2014/subject-ranking/engineering-and-IT#!/page/2/length/25/sort_by/rank/sort_order/asc/cols/undefined">archive</a>) in all subjects.</p>
+</div>
+<div class="paragraph">
+<p>Ciro finished the course with honors of "The Best Student in Automation and Control of the year 2013".</p>
+</div>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Despite studying in great institutions with great teachers, Ciro feels that:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#ciro-santillis-skills">most of what he knows</a> came from the Internet, man pages, books and his parents</p>
+</li>
+<li>
+<p><a href="#the-most-important-projects-done-by-ciro-santilli">actual projects</a> matter much more than those pieces of paper called Diplomas</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>This motivated Ciro to work on <a href="#write-free-books-to-get-famous-website">Write free books to get famous website</a>.</p>
 </div>
 </div>
 </div>
@@ -4103,7 +4152,19 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="how-to-teach--bibliography"><a class="anchor" href="#how-to-teach--bibliography"></a><a class="link" href="#how-to-teach--bibliography">6.15. Bibliography</a></h3>
+<h3 id="how-to-teach--publish-your-material-even-even-if-it-is-not-perfect"><a class="anchor" href="#how-to-teach--publish-your-material-even-even-if-it-is-not-perfect"></a><a class="link" href="#how-to-teach--publish-your-material-even-even-if-it-is-not-perfect">6.15. Publish your material even if it is nor perfect</a></h3>
+<div class="paragraph">
+<p>Just make it very clear what you&#8217;ve tried, what you observed, and what you don&#8217;t understand.</p>
+</div>
+<div class="paragraph">
+<p>This will already open up room for others to come and expand on your attempt, and you are more likely to learn the answers to your questions as they do.</p>
+</div>
+<div class="paragraph">
+<p>Perfect is the enemy of good.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="how-to-teach--bibliography"><a class="anchor" href="#how-to-teach--bibliography"></a><a class="link" href="#how-to-teach--bibliography">6.16. Bibliography</a></h3>
 <div class="paragraph">
 <p>Other people with similar philosophies:</p>
 </div>
@@ -4279,16 +4340,16 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#microsoft-windows">Microsoft Windows</a></p>
-</li>
-<li>
-<p>the 2019 <a href="#china">Chinese government</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Taboola">Taboola</a></p>
 </li>
 <li>
 <p><a href="https://en.wikipedia.org/wiki/Binary_large_object">BLOBs</a></p>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Taboola">Taboola</a></p>
+<p><a href="#microsoft-windows">Microsoft Windows</a></p>
+</li>
+<li>
+<p>the 2019 <a href="#china">Chinese government</a></p>
 </li>
 </ul>
 </div>
@@ -4309,6 +4370,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <h3 id="good"><a class="anchor" href="#good"></a><a class="link" href="#good">9.2. Good</a></h3>
 <div class="ulist">
 <ul>
+<li>
+<p><a href="https://stackoverflow.com/questions/1470434/how-does-reverse-debugging-work/53063242#53063242">reverse debugging</a></p>
+</li>
 <li>
 <p><a href="#computer">Computer</a></p>
 </li>
