--- a/window-blackout.html
+++ b/window-blackout.html
@@ -65,7 +65,7 @@
 
 <ul>
   <li>the existing sliding curtains which were not enough on their own</li>
-  <li>a cheap and comfortable <a href="&quot;Go Travel&quot;">https://www.amazon.co.uk/Go-Travel-sleep-silky-Mask/dp/B00VGAH0N8</a> sleeping mask from the Pharmacy</li>
+  <li>a cheap and comfortable <a href="https://www.amazon.co.uk/Go-Travel-sleep-silky-Mask/dp/B00VGAH0N8">“Go Travel”</a>sleeping mask from the Pharmacy</li>
 </ul>
 
 <p>is good enough to allow me to sleep properly, which is priceless.</p>
@@ -97,6 +97,8 @@
 <p><img src="http://web.archive.org/web/20190823073053if_/https://media.diy.com/is/image/Kingfisher/3663602932345_01c" height="500" /></p>
 
 <p>There is still some leakage at the bottom however, which cannot be taped. I mitigated that a bit by putting some black T-shirts on the bottom window sill, and together with the pre-existing rental curtain, it was enough.</p>
+
+<p>Another minor annoyance is that parts of the blind cloth sometimes slip out of the conduit holes in the aluminium side bars. For this reason, I have to always open and close slowly and carefully. But if it does happen, fully opening and closing carefully has solved the problem.</p>
 
 <h2 id="previous-failed-attempts">Previous failed attempts</h2>
 
