--- a/elf-hello-world.html
+++ b/elf-hello-world.html
@@ -36,7 +36,7 @@
         <a href="https://stackoverflow.com/users/895245"><i class="fab fa-stack-overflow fa-fw"></i></a>
         <a href="https://github.com/cirosantilli"><i class="fab fa-github fa-fw"></i></a>
         <a href="https://www.linkedin.com/in/cirosantilli"><i class="fab fa-linkedin fa-fw"></i></a>
-        <a href="https://www.youtube.com/channel/UCBrJjpKMpdrkA1VsAiR2wEg"><i class="fab fa-youtube fa-fw"></i></a>
+        <a href="https://www.youtube.com/c/CiroSantilli"><i class="fab fa-youtube fa-fw"></i></a>
         <a href="https://twitter.com/cirosantilli"><i class="fab fa-twitter fa-fw"></i></a>
         
         <a href="https://www.zhihu.com/people/cirosantilli/activities"><i class="fab fa-zhihu fa-fw"></i></a>
@@ -503,7 +503,7 @@ ld -o 'hello_world.out' 'hello_world.o'
 
 <p>But some newbies may prefer PNGs :-)</p>
 
-<p><a href="elf101.png"><img src="elf101.png" alt="" height="900px" /></a></p>
+<p><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/ELF_Executable_and_Linkable_Format_diagram_by_Ange_Albertini.png/1280px-ELF_Executable_and_Linkable_Format_diagram_by_Ange_Albertini.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/ELF_Executable_and_Linkable_Format_diagram_by_Ange_Albertini.png/1280px-ELF_Executable_and_Linkable_Format_diagram_by_Ange_Albertini.png" alt="" height="900px" /></a></p>
 
 <p><a href="https://github.com/corkami/pics/blob/28cb0226093ed57b348723bc473cea0162dad366/binary/elf101/elf101.pdf">Image source</a>.</p>
 
@@ -1466,13 +1466,13 @@ Program Headers:
     </script>
 
     
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script>
+    <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           jax: ["input/TeX","output/HTML-CSS"],
           displayAlign: "left",
           displayIndent: "20px"
       });
     </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 </html>
