--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
         <a href="https://stackoverflow.com/users/895245"><i class="fab fa-stack-overflow fa-fw"></i></a>
         <a href="https://github.com/cirosantilli"><i class="fab fa-github fa-fw"></i></a>
         <a href="https://www.linkedin.com/in/cirosantilli"><i class="fab fa-linkedin fa-fw"></i></a>
-        <a href="https://www.youtube.com/channel/UCBrJjpKMpdrkA1VsAiR2wEg"><i class="fab fa-youtube fa-fw"></i></a>
+        <a href="https://www.youtube.com/c/CiroSantilli"><i class="fab fa-youtube fa-fw"></i></a>
         <a href="https://twitter.com/cirosantilli"><i class="fab fa-twitter fa-fw"></i></a>
         
         <a href="https://www.zhihu.com/people/cirosantilli/activities"><i class="fab fa-zhihu fa-fw"></i></a>
@@ -67,7 +67,7 @@
       <li><a href="xhtml.xhtml">XHTML</a></li>
     </ol>
   </li>
-  <li><a href="standards/">Standards</a></li>
+  <li><a href="standards">Standards</a></li>
   <li>Browsers
     <ol>
       <li><a href="firefox">Firefox</a></li>
@@ -79,9 +79,9 @@
     <ol>
       <li><a href="ace.html">ACE</a></li>
       <li><a href="bootstrap.html">Bootstrap</a></li>
-      <li><a href="bower/">Bower</a></li>
-      <li><a href="browserify/">Browserify</a></li>
-      <li><a href="d3/">D3</a></li>
+      <li><a href="bower">Bower</a></li>
+      <li><a href="browserify">Browserify</a></li>
+      <li><a href="d3">D3</a></li>
       <li><a href="marked.html">Marked</a></li>
       <li><a href="pdfjs.html">PDF.js</a></li>
       <li><a href="jquery.html">jQuery</a></li>
@@ -129,13 +129,13 @@
     </script>
 
     
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script>
+    <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           jax: ["input/TeX","output/HTML-CSS"],
           displayAlign: "left",
           displayIndent: "20px"
       });
     </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 </html>
