--- a/articles.html
+++ b/articles.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting...</title>
-  <link rel="canonical" href="/#the-best-articles-by-ciro-santilli"/>
-  <meta http-equiv="refresh" content="0;url=/#the-best-articles-by-ciro-santilli" />
+  <link rel="canonical" href="/#articles"/>
+  <meta http-equiv="refresh" content="0;url=/#articles" />
 </head>
 <body>
   <h1>Redirecting...</h1>
-  <a href="/#the-best-articles-by-ciro-santilli">Click here if you are not redirected.<a>
-  <script>location='/#the-best-articles-by-ciro-santilli'</script>
+  <a href="/#articles">Click here if you are not redirected.<a>
+  <script>location='/#articles'</script>
 </body>
 </html>
