--- a/db/mysqldump.html
+++ b/db/mysqldump.html
@@ -34,7 +34,7 @@
         <a href="https://stackoverflow.com/users/895245"><i class="fab fa-stack-overflow fa-fw"></i></a>
         <a href="https://github.com/cirosantilli"><i class="fab fa-github fa-fw"></i></a>
         <a href="https://www.linkedin.com/in/cirosantilli"><i class="fab fa-linkedin fa-fw"></i></a>
-        <a href="https://www.youtube.com/channel/UCBrJjpKMpdrkA1VsAiR2wEg"><i class="fab fa-youtube fa-fw"></i></a>
+        <a href="https://www.youtube.com/c/CiroSantilli"><i class="fab fa-youtube fa-fw"></i></a>
         <a href="https://twitter.com/cirosantilli"><i class="fab fa-twitter fa-fw"></i></a>
         
         <a href="https://www.zhihu.com/people/cirosantilli/activities"><i class="fab fa-zhihu fa-fw"></i></a>
@@ -98,13 +98,13 @@ mysqldump -u root -p"$PASS" $DB | mysql -u root -p"$PASS" $DB2
     </script>
 
     
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script>
+    <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           jax: ["input/TeX","output/HTML-CSS"],
           displayAlign: "left",
           displayIndent: "20px"
       });
     </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 </html>
