--- a/x86-paging.html
+++ b/x86-paging.html
@@ -34,7 +34,7 @@
         <a href="https://stackoverflow.com/users/895245"><i class="fab fa-stack-overflow fa-fw"></i></a>
         <a href="https://github.com/cirosantilli"><i class="fab fa-github fa-fw"></i></a>
         <a href="https://www.linkedin.com/in/cirosantilli"><i class="fab fa-linkedin fa-fw"></i></a>
-        <a href="https://www.youtube.com/channel/UCBrJjpKMpdrkA1VsAiR2wEg"><i class="fab fa-youtube fa-fw"></i></a>
+        <a href="https://www.youtube.com/c/CiroSantilli"><i class="fab fa-youtube fa-fw"></i></a>
         <a href="https://twitter.com/cirosantilli"><i class="fab fa-twitter fa-fw"></i></a>
         
         <a href="https://www.zhihu.com/people/cirosantilli/activities"><i class="fab fa-zhihu fa-fw"></i></a>
@@ -159,7 +159,7 @@
 <div class="paragraph">
 <p>Paging solves this problem beautifully by adding one degree of indirection:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>(logical) ------------&gt; (physical)
              paging</pre>
@@ -218,13 +218,13 @@
 </ul>
 </div>
 <div class="paragraph">
-<p>Or if you like non-funny jokes: <a href="#image-the-matrix">The Kernel is The Matrix</a></p>
+<p>Or if you like non-funny jokes: <a href="#image-funny-comparison-between-the-linux-kernel-and-the-matrix-due-to-userland-memory-virtualization">Figure 1, &#8220;Funny comparison between the Linux Kernel and The Matrix due to userland memory virtualization. <a href="https://commons.wikimedia.org/wiki/File:Funny_comparison_between_the_Linux_Kernel_and_The_Matrix_due_to_userland_memory_virtualization.png">Source</a>.&#8221;</a>.</p>
 </div>
-<div id="image-the-matrix" class="imageblock">
+<div id="image-funny-comparison-between-the-linux-kernel-and-the-matrix-due-to-userland-memory-virtualization" class="imageblock">
 <div class="content">
-<a class="image" href="#image-the-matrix"><img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Funny_comparison_between_the_Linux_Kernel_and_The_Matrix_due_to_userland_memory_virtualization.png" alt="Funny comparison between the Linux Kernel and The Matrix due to userland memory virtualization"></a>
+<a class="image" href="#image-funny-comparison-between-the-linux-kernel-and-the-matrix-due-to-userland-memory-virtualization"><img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Funny_comparison_between_the_Linux_Kernel_and_The_Matrix_due_to_userland_memory_virtualization.png" alt="Funny comparison between the Linux Kernel and The Matrix due to userland memory virtualization" height="400"></a>
 </div>
-<div class="title">Figure 1. The Kernel is The Matrix</div>
+<div class="title">Figure 1. Funny comparison between the Linux Kernel and The Matrix due to userland memory virtualization. <a href="https://commons.wikimedia.org/wiki/File:Funny_comparison_between_the_Linux_Kernel_and_The_Matrix_due_to_userland_memory_virtualization.png">Source</a>.</div>
 </div>
 <div class="paragraph">
 <p><a href="https://upload.wikimedia.org/wikipedia/commons/5/59/Funny_comparison_between_the_Linux_Kernel_and_The_Matrix_due_to_userland_memory_virtualization.png" class="bare">https://upload.wikimedia.org/wikipedia/commons/5/59/Funny_comparison_between_the_Linux_Kernel_and_The_Matrix_due_to_userland_memory_virtualization.png</a></p>
@@ -325,7 +325,7 @@
 <div class="paragraph">
 <p>As such:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>(logical) ------------------&gt; (linear) ------------&gt; (physical)
              segmentation                 paging</pre>
@@ -379,7 +379,7 @@
 <div class="paragraph">
 <p>This is how the memory could look like in a single level paging scheme:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>Links   Data                    Physical address
 
@@ -453,7 +453,7 @@
 <div class="paragraph">
 <p>Suppose that the OS has setup the following page tables for process 1:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>entry index   entry address       page address   present
 -----------   ------------------  ------------   -------
@@ -468,7 +468,7 @@
 <div class="paragraph">
 <p>And for process 2:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>entry index   entry address       page address   present
 -----------   -----------------   ------------   -------
@@ -486,7 +486,7 @@
 <div class="paragraph">
 <p>When process 1 tries to access a linear address, this is the physical addresses that will be actually accessed:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>linear     physical
 ---------  ---------
@@ -504,7 +504,7 @@ FFFFF 000  00005 000</pre>
 <div class="paragraph">
 <p>To switch to process 2, the OS simply sets <code>cr3</code> to <code>CR3_2</code>, and now the following translations would happen:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>linear     physical
 ---------  ---------
@@ -525,7 +525,7 @@ FFFFF 000  FFFFF 000</pre>
 <ul>
 <li>
 <p>split the linear address into two parts:</p>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>| page (20 bits) | offset (12 bits) |</pre>
 </div>
@@ -560,7 +560,7 @@ FFFFF 000  FFFFF 000</pre>
 </li>
 <li>
 <p>to find the final physical address we just need to add the offset:</p>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>  00001 000
 + 00000 001
@@ -638,7 +638,7 @@ FFFFF 000  FFFFF 000</pre>
 <div class="paragraph">
 <p>This could happen for example due to a programming error:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>int *is = malloc(1);
 is[2] = 1;</pre>
@@ -689,7 +689,7 @@ is[2] = 1;</pre>
 <div class="paragraph">
 <p>On this simplified example, the page table entries contain only two fields:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>bits   function
 -----  -----------------------------------------
@@ -707,11 +707,11 @@ is[2] = 1;</pre>
 <p>It would be impractical to align things at 21 bytes since memory is addressable by bytes and not bits. Therefore, even in only 21 bits are needed in this case, hardware designers would probably choose 32 to make access faster, and just reserve bits the remaining bits for later usage. The actual value on x86 is 32 bits.</p>
 </div>
 <div class="paragraph">
-<p>Here is a screenshot from the Intel manual image "Formats of CR3 and Paging-Structure Entries with 32-Bit Paging" showing the structure of a page table in all its glory: <a href="#image-x86-page-entry">x86 Page Entry format</a>.</p>
+<p>Here is a screenshot from the Intel manual image "Formats of CR3 and Paging-Structure Entries with 32-Bit Paging" showing the structure of a page table in all its glory: <a href="#image-x86-page-entry-format">Figure 2, &#8220;x86 Page Entry format&#8221;</a>.</p>
 </div>
-<div id="image-x86-page-entry" class="imageblock">
+<div id="image-x86-page-entry-format" class="imageblock">
 <div class="content">
-<a class="image" href="#image-x86-page-entry"><img src="x86-page-entry.png" alt="x86 page entry" height="300"></a>
+<a class="image" href="#image-x86-page-entry-format"><img src="x86-page-entry.png" alt="x86 page entry" height="300"></a>
 </div>
 <div class="title">Figure 2. x86 Page Entry format</div>
 </div>
@@ -828,7 +828,7 @@ is[2] = 1;</pre>
 <div class="paragraph">
 <p>and in C pseudo-code it looks like this:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>linear_address[0]      = physical_address_0
 linear_address[1]      = physical_address_1
@@ -859,7 +859,7 @@ linear_address[2^20-1] = physical_address_N</pre>
 <div class="paragraph">
 <p>In C-pseudo code, a 2-level K-ary tree with <code>K = 2^10</code> looks like this:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>level0[0] = &amp;level1_0[0]
     level1_0[0]      = physical_address_0_0
@@ -942,7 +942,7 @@ level0[N] = &amp;level1_N[0]
 <div class="paragraph">
 <p>Addresses are now split as:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>| directory (10 bits) | table (10 bits) | offset (12 bits) |</pre>
 </div>
@@ -1002,7 +1002,7 @@ level0[N] = &amp;level1_N[0]
 <div class="paragraph">
 <p>Page directory given to process by the OS:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>entry index   entry address      page table address  present
 -----------   ----------------   ------------------  --------
@@ -1017,7 +1017,7 @@ level0[N] = &amp;level1_N[0]
 <div class="paragraph">
 <p>Page tables given to process by the OS at <code>PT1 = 0x10000000</code> (<code>0x10000</code> * 4K):</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>entry index   entry address      page address  present
 -----------   ----------------   ------------  -------
@@ -1031,7 +1031,7 @@ level0[N] = &amp;level1_N[0]
 <div class="paragraph">
 <p>Page tables given to process by the OS at <code>PT2  = 0x80000000</code> (<code>0x80000</code> * 4K):</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>entry index   entry address     page address  present
 -----------   ---------------   ------------  ------------
@@ -1048,7 +1048,7 @@ level0[N] = &amp;level1_N[0]
 <div class="paragraph">
 <p>With that setup, the following translations would happen:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>linear    10 10 12 split  physical
 --------  --------------  ----------
@@ -1069,7 +1069,7 @@ level0[N] = &amp;level1_N[0]
 <ul>
 <li>
 <p>In binary the linear address is:</p>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>0    0    8    0    1    0    0    4
 0000 0000 1000 0000 0001 0000 0000 0100</pre>
@@ -1078,7 +1078,7 @@ level0[N] = &amp;level1_N[0]
 </li>
 <li>
 <p>Grouping as <code>10 | 10 | 12</code> gives:</p>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>0000000010 0000000001 000000000100
 0x2        0x1        0x4</pre>
@@ -1087,7 +1087,7 @@ level0[N] = &amp;level1_N[0]
 <div class="paragraph">
 <p>which gives:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>page directory entry = 0x2
 page table     entry = 0x1
@@ -1113,7 +1113,7 @@ offset               = 0x4</pre>
 <p>Page faults occur if either a page directory entry or a page table entry is not present.</p>
 </div>
 <div class="paragraph">
-<p>The Intel manual gives a picture of this translation process in the image "Linear-Address Translation to a 4-KByte Page using 32-Bit Paging": <a href="#image-x86-page-translation">x86 Page Translation</a>:</p>
+<p>The Intel manual gives a picture of this translation process in the image "Linear-Address Translation to a 4-KByte Page using 32-Bit Paging": <a href="#image-x86-page-translation">Figure 3, &#8220;x86 Page Translation&#8221;</a></p>
 </div>
 <div id="image-x86-page-translation" class="imageblock">
 <div class="content">
@@ -1151,7 +1151,7 @@ offset               = 0x4</pre>
 <div class="paragraph">
 <p>The 48 bits are split equally into two disjoint parts:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>----------------- FFFFFFFF FFFFFFFF
 Top half
@@ -1276,7 +1276,7 @@ Bottom half
 <div class="paragraph">
 <p>After a translation between linear and physical address happens, it is stored on the TLB. For example, a 4 entry TLB starts in the following state:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>  valid  linear  physical
   -----  ------  --------
@@ -1292,7 +1292,7 @@ Bottom half
 <div class="paragraph">
 <p>and after a page linear address <code>00003</code> is translated to a physical address <code>00005</code>, the TLB becomes:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>  valid  linear  physical
   -----  ------  --------
@@ -1305,7 +1305,7 @@ Bottom half
 <div class="paragraph">
 <p>and after a second translation of <code>00007</code> to <code>00009</code> it becomes:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>  valid  linear  physical
   -----  ------  --------
@@ -1330,7 +1330,7 @@ Bottom half
 <div class="paragraph">
 <p>With LRU, starting from state:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>  valid  linear  physical
   -----  ------  --------
@@ -1343,7 +1343,7 @@ Bottom half
 <div class="paragraph">
 <p>adding <code>0000D &#8594; 0000A</code> would give:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>  valid  linear  physical
   -----  ------  --------
@@ -1381,7 +1381,7 @@ Bottom half
 <div class="paragraph">
 <p>could be stored in a TLB with 4 entries:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>linear  physical
 ------  --------
@@ -1394,7 +1394,7 @@ FFFFF   00000</pre>
 <div class="paragraph">
 <p>However, to implement this with RAM, <em>it would be necessary to have 2^20 addresses</em>:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>linear  physical
 ------  --------
@@ -1513,7 +1513,7 @@ FFFFF   00000</pre>
 <div class="paragraph">
 <p>Like this:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>------------------ FFFFFFFF
 Kernel
@@ -1543,7 +1543,7 @@ Process
 <div class="paragraph">
 <p>Like this:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>------------------ FFFFFFFF
 Kernel
@@ -1579,7 +1579,7 @@ Process
 <div class="paragraph">
 <p>For each process, the virtual address space looks like this:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>------------------ 2^32 - 1
 Stack (grows down)
@@ -1719,7 +1719,7 @@ Text
 <div class="paragraph">
 <p>There seems to be no structs defined to represent the pages, only macros: <code>include/asm/page_types.h</code> is specially interesting. Excerpt:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>#define _PAGE_BIT_PRESENT   0   /* is present */
 #define _PAGE_BIT_RW        1   /* writeable */
@@ -1730,7 +1730,7 @@ Text
 <div class="paragraph">
 <p><code>arch/x86/include/uapi/asm/processor-flags.h</code> defines <code>CR0</code>, and in particular the <code>PG</code> bit position:</p>
 </div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre>#define X86_CR0_PG_BIT      31 /* Paging */</pre>
 </div>
@@ -1827,13 +1827,13 @@ Text
     </script>
 
     
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script>
+    <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           jax: ["input/TeX","output/HTML-CSS"],
           displayAlign: "left",
           displayIndent: "20px"
       });
     </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 </html>
