--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -683,7 +683,7 @@ Your browser does not support the video tag.
 <p>48 hours was expected to be a reasonable time until all pores went bad, and so we called it a day, and waited for an email from the PuntSeq team telling us how things went.</p>
 </div>
 <div class="paragraph">
-<p>The nominal maximum base pairs sequenced is 30 billion, so about 10 entire human genomes, which is not bad! We reached a yield of 16Gbp which the bio people said was not bad.</p>
+<p>We reached a yield of 16 billion base pairs out of the 30Gbp nominal maximum, which the bio people said was not bad.</p>
 </div>
 </div>
 </div>
