3dc0e70b7dbe18f1b9136a0dc20a34fbdf04f623

--- a/projects.html
+++ b/projects.html
@@ -119,6 +119,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>2019-09</td>
+      <td><a href="https://github.com/KaTeX/KaTeX">KaTeX</a></td>
+      <td>1</td>
+      <td><a href="https://github.com/KaTeX/KaTeX/pull/2091">Create globalGroup option to place definitions in global scope</a></td>
+    </tr>
+    <tr>
       <td>2018-06</td>
       <td>raspi3-tutorial</td>
       <td>0</td>
