5989608fc06bc350f1758d4de42e474038f4ad8c

--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -193,7 +193,7 @@ U-A-G-C-U-A-G-C     G
 <p><a href="https://en.wikipedia.org/wiki/Illumina,_Inc.">Illumina equipment</a> is currently cheaper per base pair and dominates the human genome sequencing market, but it requires a much higher initial investment for the equipment</p>
 </div>
 <div class="paragraph">
-<p>The Nanopore costs just about 500 pounds for the reusable machine, and 500 pounds for the one usage flow cell which can decode up to 30 billion base pairs, which is about 10 human genomes!</p>
+<p>The Nanopore costs just about 500 dollars for the reusable machine, and 500 dollars for the one usage flow cell which can decode up to 30 billion base pairs, which is about 10 human genomes!</p>
 </div>
 <div class="paragraph">
 <p>Other advantages of the MinION over Illumina which didn&#8217;t really matter to this particular experiment are:</p>
