1565d3af09db9553e7c1bd846264bb729e27d55d

--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -597,7 +597,7 @@ Barcode --- 27S --- 16S --- 1492R</pre>
 <h2 id="sequencing"><a class="anchor" href="#sequencing"></a><a class="link" href="#sequencing">6. Sequencing</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Once we had the amplified 16S DNA clean, we were almost ready to start sequencing!</p>
+<p>Once we had the amplified 16S DNA, we were almost ready to start sequencing!</p>
 </div>
 <div class="paragraph">
 <p>First we had to remove PCR byproducts with the <a href="#qiagen-qiaquick-pcr-purification-kit">Qiagen QIAquick PCR Purification Kit</a>.</p>
