75067ea1c58bd1a37da108bc3f45cfb26e9f3254

--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -694,6 +694,9 @@ Your browser does not support the video tag.
 <p>To be honest, because I&#8217;m a software engineer, and I&#8217;ve done enough staring in computers for a lifetime already, and I believe in the power of <a href="https://en.wikipedia.org/wiki/Git">Git</a>, I didn&#8217;t pay much attention to this ;-)</p>
 </div>
 <div class="paragraph">
+<p>TODO at least mention the key algorithms and link to GitHub software.</p>
+</div>
+<div class="paragraph">
 <p>I can however see that it does however present interesting problems!</p>
 </div>
 <div class="paragraph">
