--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -549,7 +549,7 @@ Barcode --- 27S --- 16S --- 1492R</pre>
 <p>And so this is the first thing we did on the second day!</p>
 </div>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Gel_electrophoresis" class="bare">https://en.wikipedia.org/wiki/Gel_electrophoresis</a> separates molecules by their charge-to-mass ratio.</p>
+<p><a href="https://en.wikipedia.org/wiki/Gel_electrophoresis">Gel electrophoresis</a> separates molecules by their charge-to-mass ratio.</p>
 </div>
 <div class="paragraph">
 <p>This allows us to determine how long are the DNA fragments present in our solution.</p>
